--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,24 @@
             <version>${org.mapstruct.version}</version>
         </dependency>
     </dependencies>
-
+    <profiles>
+        <profile>
+            <id>integration-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <includes>
+                                <include>**/*IT.*</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -105,5 +122,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
