--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>academy.devdojo</groupId>
     <artifactId>springboot-essentials</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>springboot-essentials</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -18,6 +18,11 @@
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <lombok.version>1.18.24</lombok.version>
         <springdoc-openapi-ui.version>1.6.9</springdoc-openapi-ui.version>
+        <jib-maven-plugin.version>3.2.1</jib-maven-plugin.version>
+        <docker.distroless.image>gcr.io/distroless/java17-debian11</docker.distroless.image>
+        <docker.repo.url>0miniporrinha</docker.repo.url>
+        <docker.repo.project>springboot-essentials</docker.repo.project>
+        <docker.image.name>${docker.repo.url}/${docker.repo.project}</docker.image.name>
     </properties>
 
     <dependencies>
@@ -111,6 +116,25 @@
     </profiles>
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>${jib-maven-plugin.version}</version>
+                <configuration>
+                    <from>
+                        <image>${docker.distroless.image}</image>
+                    </from>
+                    <to>
+                        <image>${docker.image.name}</image>
+                        <tags>
+                            <tag>${project.version}</tag>
+                        </tags>
+                    </to>
+                    <container>
+                        <mainClass>academy.devdojo.springboot.SpringbootEssentialsApplication</mainClass>
+                    </container>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
